# gretchen_tutorial_sensoriboard

./: .gitignore  .gitmodules  README.md
aibrain_ros_java/: .project  CMakeLists.txt  build.gradle  package.xml  readme.md  settings.gradle
aibrain_ros_java/aicore_client/: .project
aicore_client/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
ball_tracking/: CMakeLists.txt  README.md  package.xml
ball_tracking/launch/: ball_tracker_callback.launch  ball_tracker_simple.launch  start_init.launch
ball_tracking/script/: ball_tracking_callback.py  ball_tracking_simple.py  key_op.py
ball_tracking/script/lib/: ball_detector.py  camera.py  robot.py
course_material/: CMakeLists.txt  README.md  package.xml  readme.md
course_material/launch/: aicore_tutorial.launch  gazr_tutorial.launch  init_device.launch  init_device_rgbd.launch
course_material/lib/: aicore_client.py  ball_detector.py  camera.py  camera_v2.py  common.py  robot.py  ros_environment.py
course_material/trash/: example_3_track_face.py  example_4_track_object.py  exercise_1_bk_python3.py
course_material/week_2/: example_imp_ctrl.py  example_pos_ctrl.py  homework1_imp_ctrl.py  homework1_imp_ctrl_solution.py  homework2_pos_ctrl.py  homework2_pos_ctrl_solution.py
course_material/week_3/: example_imp_ctrl.py  example_pos_ctrl.py  homework1_set_voltage.py  homework1_set_voltage_solution.py  homework2_imp_ctrl.py  homework2_imp_ctrl_solution.py  homework2_pos_ctrl_solution.py  homework3_pos_ctrl.py  homework3_pos_ctrl_solution.py  homework4_pos_ctrl.py  homework4_pos_ctrl_solution.py
course_material/week_4/: aa.py  ball_tracking_callback.py  example.py  example_1_get_image.py  example_2_get_pixel.py  example_3_convert_2d_3d.py  example_3_trying_move.py  example_3_trying_move_motor.py  example_4_trying_move_3d.py  example_4_trying_move_motor.py  example_5_trying_move_motor.py  example_6_trying_move_3d.py  homework_1_get_image.py  homework_1_get_image_solution.py  homework_2_get_pixel.py  homework_2_get_pixel_solution.py  homework_3_draw.py  homework_3_draw_solution.py  homework_3_get_pixel.py  homework_3_trying_move_motor.py  homework_3_trying_move_motor_solution.py  homework_4_move_motor.py  homework_4_move_motor_solution.py  homework_4_trying_move_3d.py  homework_4_trying_move_motor.py  homework_4_trying_move_motor_solution.py  homework_5_move_motor.py  homework_5_move_motor_solution.py  homework_5_trying_move_3d.py  homework_6_move_3d.py  homework_6_move_3d_solution.py  test.py
course_material/week_5/: example_1.py  example_1_get_hsv.py  example_1_get_image.py  example_2.py  (+30 more)
look_at_point/: CMakeLists.txt  README.md  package.xml
look_to_point/: CMakeLists.txt  README.md  package.xml
look_to_point/launch/: detect_object_and_save.launch  start_all.launch  start_look_to_point.1.launch  start_look_to_point.launch
look_to_point/src/: look_to_point.cpp  save_objects_to_map_with_yolo.cpp
(+96 files in other folders)
